[tool.poetry]
name = "forum-inspector"
version = "0.4.2"
description = "TODO"
authors = ["Sergei Hilton <sergeihilton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
flet = "^0.19.0"
pycryptodome = "^3.20.0"
beautifulsoup4 = "~4.12.3"
aiohttp = "^3.9.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
